--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,12 @@
     "zfegg/doctrine-helper": "^0.1.0",
     "symfony/property-access": "^5.2"
   },
+  "suggest": {
+    "doctrine/dbal": "Doctrine DBAL resource required",
+    "doctrine/orm": "Doctrine ORM resource required",
+    "symfony/property-access": "Doctrine ORM resource required",
+    "symfony/serializer": "Doctrine ORM resource required"
+  },
   "repositories": [
     {
       "type": "path",
