--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -37,12 +37,25 @@
     <config name="installed_paths" value="vendor/slevomat/coding-standard/SlevomatCodingStandard"/>
     <rule ref="SlevomatCodingStandard.TypeHints.DeclareStrictTypes" />
     <rule ref="SlevomatCodingStandard.TypeHints.ReturnTypeHintSpacing" />
+    <rule ref="SlevomatCodingStandard.TypeHints.NullableTypeForNullDefaultValue" />
+    <rule ref="SlevomatCodingStandard.TypeHints.ParameterTypeHintSpacing" />
+    <rule ref="SlevomatCodingStandard.TypeHints.ReturnTypeHintSpacing" />
     <rule ref="SlevomatCodingStandard.TypeHints.ReturnTypeHint" >
         <exclude name="SlevomatCodingStandard.TypeHints.ReturnTypeHint.MissingTraversableTypeHintSpecification" />
+        <properties>
+            <property name="enableUnionTypeHint" value="false" />
+            <property name="enableMixedTypeHint" value="false" />
+        </properties>
     </rule>
+
     <rule ref="SlevomatCodingStandard.TypeHints.UselessConstantTypeHint" />
+
     <rule ref="SlevomatCodingStandard.TypeHints.ParameterTypeHint">
         <exclude name="SlevomatCodingStandard.TypeHints.ParameterTypeHint.MissingTraversableTypeHintSpecification" />
+        <properties>
+            <property name="enableUnionTypeHint" value="false" />
+            <property name="enableMixedTypeHint" value="false" />
+        </properties>
     </rule>
     <rule ref="SlevomatCodingStandard.TypeHints.PropertyTypeHint" >
         <exclude name="SlevomatCodingStandard.TypeHints.PropertyTypeHint.MissingTraversableTypeHintSpecification" />
@@ -52,4 +65,12 @@
     </rule>
     <rule ref="SlevomatCodingStandard.Namespaces.UnusedUses" />
 
+    <rule ref="SlevomatCodingStandard.Namespaces.UnusedUses" >
+        <properties>
+            <property name="searchAnnotations" value="true" />
+            <property name="ignoredAnnotations" type="array">
+                <element value="ORM" />
+            </property>
+        </properties>
+    </rule>
 </ruleset>
