--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
     }
   ],
   "require": {
-    "php": ">=7.4",
-    "doctrine/dbal": "^2.2.0 || ^3.0.0",
+    "php": ">=8.0",
+    "doctrine/dbal": "^2.10.0 || ^3.0.0",
     "zfegg/api-serializer-ext": "^0.1.1",
-    "zfegg/api-restful-handler": "^0.2.0"
+    "zfegg/api-restful-handler": "^0.3.0"
   },
   "autoload": {
     "psr-4": {
@@ -32,12 +32,13 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
+    "doctrine/dbal": "^2.10.0",
     "slevomat/coding-standard": "^6.4",
-    "symfony/serializer": "^5.2",
+    "symfony/serializer": "^5.2 | ^6.0",
     "laminas/laminas-servicemanager": "^3.6",
-    "roave/psr-container-doctrine": "^2.2 | ^3.0",
+    "roave/psr-container-doctrine": "^3.0",
     "zfegg/doctrine-helper": "^0.1.0",
-    "symfony/property-access": "^5.2"
+    "symfony/property-access": "^5.2 | ^6.0"
   },
   "suggest": {
     "doctrine/orm": "Doctrine ORM resource required",
