--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "require": {
     "php": ">=8.0",
-    "doctrine/dbal": "^2.10.0 || ^3.0.0",
+    "doctrine/dbal": "^3.3.0",
     "zfegg/api-serializer-ext": "^0.1.1",
     "zfegg/api-restful-handler": "^0.3.0"
   },
@@ -32,7 +32,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
-    "doctrine/dbal": "^2.10.0",
+    "doctrine/dbal": "^3.3.5",
     "slevomat/coding-standard": "^6.4",
     "symfony/serializer": "^5.2 | ^6.0",
     "laminas/laminas-servicemanager": "^3.6",
@@ -50,5 +50,10 @@
     "cs-fix": "phpcbf",
     "test": "phpunit --colors=always",
     "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
   }
 }
