--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "require": {
     "php": ">=8.0",
-    "doctrine/dbal": "^3.3.0",
+    "doctrine/dbal": "^3.3.0 || ^4.0",
     "zfegg/api-serializer-ext": "^0.1.1",
     "zfegg/api-restful-handler": "^0.4.0"
   },
