--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "php": ">=8.0",
     "doctrine/dbal": "^3.3.0 || ^4.0",
     "zfegg/api-serializer-ext": "^0.1.1",
-    "zfegg/api-restful-handler": "^0.4.0"
+    "zfegg/api-restful-handler": "^0.4.0 | ^0.5.0"
   },
   "autoload": {
     "psr-4": {
@@ -37,7 +37,7 @@
     "phpunit/phpunit": "^9.5",
     "doctrine/dbal": "^3.3.5",
     "slevomat/coding-standard": "^6.4",
-    "symfony/serializer": "^5.2 | ^6.0",
+    "symfony/serializer": "^5.2 | ^6.0 | ^7.0",
     "laminas/laminas-servicemanager": "^3.6",
     "roave/psr-container-doctrine": "^3.0",
     "zfegg/doctrine-helper": "^0.1.0",
