--- a/composer.json
+++ b/composer.json
@@ -35,13 +35,12 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
-    "doctrine/dbal": "^3.3.5",
-    "slevomat/coding-standard": "^6.4",
+    "slevomat/coding-standard": "^8.15",
     "symfony/serializer": "^5.2 | ^6.0 | ^7.0",
-    "laminas/laminas-servicemanager": "^3.6",
-    "roave/psr-container-doctrine": "^3.0",
-    "zfegg/doctrine-helper": "^0.1.0",
-    "symfony/property-access": "^5.2 | ^6.0"
+    "laminas/laminas-servicemanager": "^4.0",
+    "zfegg/doctrine-helper": "^0.4",
+    "symfony/property-access": "^5.2 | ^6.0 | ^7.0",
+    "roave/psr-container-doctrine": "^5.5"
   },
   "suggest": {
     "doctrine/orm": "Doctrine ORM resource required",
