--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     }
   ],
   "require": {
-    "php": ">=8.0",
-    "doctrine/dbal": "^3.3.0 || ^4.0",
-    "zfegg/api-serializer-ext": "^0.1.1",
+    "php": ">=8.2",
+    "doctrine/dbal": "^4.0",
+    "zfegg/api-serializer-ext": "^0.2.0",
     "zfegg/api-restful-handler": "^0.4.0 | ^0.5.0"
   },
   "autoload": {
@@ -30,16 +30,15 @@
       "config-provider": "Zfegg\\ApiResourceDoctrine\\ConfigProvider"
     },
     "branch-alias": {
-      "dev-master": "0.6.x-dev"
+      "dev-master": "0.7.x-dev"
     }
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
     "slevomat/coding-standard": "^8.15",
-    "symfony/serializer": "^5.2 | ^6.0 | ^7.0",
     "laminas/laminas-servicemanager": "^4.0",
-    "zfegg/doctrine-helper": "^0.4",
-    "symfony/property-access": "^5.2 | ^6.0 | ^7.0",
+    "zfegg/doctrine-helper": "^0.4.0",
+    "symfony/property-access": "^7.0",
     "roave/psr-container-doctrine": "^5.5"
   },
   "suggest": {
